--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "redis": "^5.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
