--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,8 @@ services:
   backend:
     build: .
     env_file: .env
+    environment:
+      PORT: 4000
+      URL_SHORTENER_SERVICE_URL: http://host.docker.internal:3000
     ports:
       - "4000:4000"
